--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -113,6 +113,7 @@
     "button_text2": "Веб-сайт",
     "button_text3": "CRM",
     "button_text4": "UX/UI",
+    "button_text5": "Телеграм-бот",
     "card1_title": "Femmy",
     "card1_text": "Приложение для мобильных устройств",
     "card2_title": "IMPERIAL GRANITE",
@@ -177,6 +178,27 @@
     "project_card2_text": "Помощь детям заснуть в спокойной и умиротворённой обстановке, предоставляя мамам удобный и качественный инструмент. В приложении собран проверенный и возрасту подходящий аудиоконтент: аяты Корана, классические колыбельные, сказки и звуки животных. Функции записи голоса, список избранного и чистый, понятный детям интерфейс делают использование простым и удобным.",
     "project_card3_title": "Tashriflarni rejalashtirish va nazorat qilish",
     "project_card3_text": "Shifokorlar va dorixonalar ma’lumotlar bazasini boshqarish. Har bir tashrif bo‘yicha batafsil hisobotlar, ish jarayonlarini avtomatlashtirish, jamoa samaradorligini real vaqt rejimida kuzatish"
+  },
+  "project6": {
+    "banner_title": "Бот Мохинур Рахимжоновой",
+    "banner_subtitle": "Telegram-бот для бухгалтерского вебинара",
+    "banner_text": "Telegram-бот автоматизирует регистрацию на бухгалтерские вебинары: пользователь переходит по ссылке, регистрируется и автоматически присоединяется к каналу. Организатор может общаться с клиентами напрямую через бота.",
+    "banner_button1": "Play Market",
+    "banner_button2": "App Store",
+    "project_title": "Особенности проекта",
+    "project_card1_title": "Возможности бота:",
+    "project_card1_text": "Бот обеспечивает автоматическую регистрацию, подключение к вебинар-каналу, формирует базу пользователей для организатора и обеспечивает максимальную конверсию при минимальном взаимодействии."
+  },
+  "project7": {
+    "banner_title": "Бот Hisobchi AI",
+    "banner_subtitle": "Hisobchi AI — бот с ИИ для управления личными финансами",
+    "banner_text": "Hisobchi AI — это Telegram-бот, который принимает доходы, расходы и долги в виде текста или голосового сообщения и автоматически анализирует и классифицирует их с помощью искусственного интеллекта. Формирует статистику и отправляет напоминания.",
+    "banner_button3": "Telegram-бот",
+    "project_title": "Особенности проекта",
+    "project_card1_title": "Описание:",
+    "project_card1_text": "Hisobchi AI — это финансовый помощник с искусственным интеллектом, который помогает пользователям легко и быстро контролировать свои доходы, расходы и долги. Работает через Telegram: пользователь отправляет информацию о своих финансах в текстовом или голосовом виде, бот автоматически классифицирует данные, формирует статистику и отправляет напоминания.",
+    "project_card2_title": "Основные функции:",
+    "project_card2_text": "Распознавание доходов и расходов на основе ИИ Контроль задолженностей и напоминания Ежедневная, еженедельная, ежемесячная и годовая статистика Понимание текстовых и голосовых команд"
   },
   "partners": {
     "title": "Наши партнеры"
